<resources>
    <string name="app_name">KeepYourNotes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_to_keep_your_notes">New to KeepYourNotes?</string>
    <string name="register">Register</string>
    <string name="your_name">Your name</string>
    <string name="phone">Phone</string>
    <string name="retype_password">Retype password</string>
    <string name="you_re_agree_to_our">By signing up, you\'re agree to our</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get started</string>
    <string name="account_created_successfully">Account created successfully!</string>
    <string name="notes">Notes</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="account_information">Account information</string>
    <string name="language">Language</string>
    <string name="version">Version</string>
    <string name="delete_account">Delete account</string>
    <string name="english">English</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="created_date">Created date</string>
    <string name="private_information">Private Information</string>
    <string name="change">Change</string>
    <string name="update">Update</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Confirm new password</string>
    <string name="quick_notes">Quick Notes</string>
    <string name="current_password">Current password</string>
    <string name="check_for_update">Checking for update…</string>
    <string name="updated_latest">You have updated to the latest version</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="your_account_will_be_remove">Your account will be remove and this action can not undo!</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="account_has_been_deleted">Account has been deleted!</string>
    <string name="something_went_wrong">Something went wrong: </string>
    <string name="close">Close</string>
    <string name="choose_language">Choose language</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="do_you_want_to_sign_out">Do you really want to sign out?</string>
    <string name="fill_your_registered_email">Please fill in your registered email from the box below. We will send you a confirmation link.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="txt_continue">Continue</string>
    <string name="refresh">Refresh</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about_us">About Us</string>
</resources>