<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBackRegister"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-50dp"
            android:rotation="180"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/reg_note"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_outline_person_outline_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etNameRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/your_name"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvYourNameErrorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_outline_mail_outline_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvEmailErrorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_outline_lock_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPasswordErrorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_outline_lock_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etRePasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/retype_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvRePasswordErrorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_outline_phone_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/etPhoneRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="12"
                android:autofillHints="" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPhoneErrorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text=""
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_re_agree_to_our"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTermsConditionsRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/and"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPrivacyPolicyRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_background_blue"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>